Adds conceptual documentation for how to build a custom compositor app

--- a/windows-driver-docs-pr/display/toc.yml
+++ b/windows-driver-docs-pr/display/toc.yml
@@ -662,6 +662,8 @@
       href: specialized-monitors.md
     - name: "EDID Extension for HMDs and Specialized Monitors"
       href: "specialized-monitors-edid-extension.md"
+    - name: "Building a Custom Compositor App for HMDs and Specialized Monitors"
+      href: "specialized-monitors-compositor.md"
   - name: "Multiple Monitors and Video Present Networks"
 # Auto-expanded node
     items: 
