--- a/windows-driver-docs-pr/bluetooth/toc.yml
+++ b/windows-driver-docs-pr/bluetooth/toc.yml
@@ -90,6 +90,7 @@
     href: testing-Bluetooth-main.md
     items: 
     - name: "Bluetooth Test Platform (BTP)"
-      href: bluetooth-proximity-profile.md
-    - name: "Proximity Profile Implementation Details"
-      href: proximity-profile-implementation-details.md
+      href: testing-BTP-Overview.md
+      items:
+      - name: "BTP Overview"
+      href: testing-BTP-Overview.md.md
