--- a/windows-driver-docs-pr/install/toc.yml
+++ b/windows-driver-docs-pr/install/toc.yml
@@ -274,7 +274,7 @@
       href: software-publisher-certificate.md
     - name: "Commercial Release Certificate"
       href: commercial-release-certificate.md
-    - name: "Deprecation of Software Publisher Certificates and Commercial Release Certificates"
+    - name: "Deprecation of Software Publisher Certificates, Commercial Release Certificates, and Commercial Test Certificates"
       href: deprecation-of-software-publisher-certificates-and-commercial-release-certificates.md  
     - name: "Release-Signing Driver Packages"
       href: release-signing-driver-packages.md
