--- a/windows-driver-docs-pr/stream/toc.yml
+++ b/windows-driver-docs-pr/stream/toc.yml
@@ -7,8 +7,10 @@
   items: 
   - name: "USB Video Class (UVC) camera implementation guide"
     href: uvc-camera-implementation-guide.md
-  - name: "Camera intrinsics"
+  - name: "Camera Intrinsics"
     href: camera-intrinsics.md
+  - name: "Camera Capture Metadata"
+    href: mf-capture-metadata.md
   - name: "Camera Device Orientation"
     href: camera-device-orientation.md
   - name: "Camera Profiles"
@@ -29,8 +31,6 @@
   href: windows-hello-camera-driver-bring-up-guide.md
 - name: "Extended camera controls"
   href: standardized-extended-controls-.md
-- name: "Camera capture metadata"
-  href: mf-capture-metadata.md
 - name: "Frame Server Custom Media Source"
   href: frame-server-custom-media-source.md
 - name: "360 camera video capture"
